--- a/Composant2/Composant2.vcxproj
+++ b/Composant2/Composant2.vcxproj
@@ -14,6 +14,7 @@
     <ProjectGuid>{38791A35-6BDD-42B2-873F-621244FB3426}</ProjectGuid>
     <RootNamespace>Composant2</RootNamespace>
     <Keyword>MFCDLLProj</Keyword>
+    <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
