--- a/Composant2/Composant2.vcxproj
+++ b/Composant2/Composant2.vcxproj
@@ -102,6 +102,11 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\interfaces\Composant2.h" />
+    <ClInclude Include="Composant2Version.h" />
+    <ClInclude Include="resource1.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="Composant21.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
