--- a/Composant2/Composant2.vcxproj.filters
+++ b/Composant2/Composant2.vcxproj.filters
@@ -19,5 +19,14 @@
     <ClInclude Include="..\interfaces\Composant2.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Composant2Version.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="resource1.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="Composant21.rc" />
   </ItemGroup>
 </Project>
